--- a/App.xaml
+++ b/App.xaml
@@ -6,7 +6,11 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="SupportDictionaries/Themes/DarkTheme.xaml"/>
+                <ResourceDictionary Source="SupportDictionaries/FontsNames.xaml"/>
+                
                 <ResourceDictionary Source="Styles/ButtonStyles.xaml"/>
+                <ResourceDictionary Source="Styles/TextBlockStyles.xaml"/>
                 <ResourceDictionary Source="Styles/WindowStyles.xaml"/>
                 <ResourceDictionary Source="Templates/ButtonTemplates.xaml"/>
                 <ResourceDictionary Source="Templates/WindowTemplates.xaml"/>
