--- a/Styles/ButtonStyles.xaml
+++ b/Styles/ButtonStyles.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:Niero">
-    <Style x:Key="StartButton" TargetType="Button">
+    <Style x:Key="AnimatedTransparentButton" TargetType="Button">
         <Style.Setters>
             <Setter Property="Background" Value="Transparent"/>
             <Setter Property="Foreground" Value="Gray"/>
