--- a/SupportDictionaries/Themes/DarkTheme.xaml
+++ b/SupportDictionaries/Themes/DarkTheme.xaml
@@ -3,12 +3,17 @@
                     xmlns:local="clr-namespace:Niero">
     
     <Color x:Key="OverlayLightColor">#383B40</Color>
-    
+    <SolidColorBrush x:Key="OverlayLightBrush" Color="{DynamicResource OverlayLightColor}"/>
+
     <Color x:Key="OverlayDarkColor">#2D2F34</Color>
-    
+    <SolidColorBrush x:Key="OverlayDarkBrush" Color="{DynamicResource OverlayDarkColor}"/>
+
     <Color x:Key="SurfaceColor">#27292D</Color>
+    <SolidColorBrush x:Key="SurfaceBrush" Color="{DynamicResource SurfaceColor}"/>
 
     <Color x:Key="BaseColor">#1F2023</Color>
+    <SolidColorBrush x:Key="BaseBrush" Color="{DynamicResource BaseColor}"/>
 
     <Color x:Key="OverflowColor">#010101</Color>
+    <SolidColorBrush x:Key="OverflowBrush" Color="{DynamicResource OverflowColor}"/>
 </ResourceDictionary>
