--- a/Styles/ButtonStyles.xaml
+++ b/Styles/ButtonStyles.xaml
@@ -10,8 +10,6 @@
             <Setter Property="FontFamily" Value="Freestyle Script"/>
             <Setter Property="FontSize" Value="20"/>
             <Setter Property="FontStyle" Value="Normal"/>
-            <Setter Property="Height" Value="25"/>
-            <Setter Property="Width" Value="145"/>
         </Style.Setters>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
@@ -36,6 +34,58 @@
                         <DoubleAnimation Storyboard.TargetProperty="Width" Duration="0:0:1" To="145" />
                     </Storyboard>
                 </BeginStoryboard>
+            </EventTrigger>
+        </Style.Triggers>
+    </Style>
+
+    <!-- Storyboards -->
+
+    <Storyboard x:Key="MouseEnterAnimation_1">
+        <ColorAnimation Storyboard.TargetProperty="Foreground.Color" Duration="0:0:1" To="Transparent" />
+        <ColorAnimation Storyboard.TargetProperty="Background.Color" Duration="0:0:1" To="Black" />
+    </Storyboard>
+
+    <Storyboard x:Key="MouseLeaveAnimation_1">
+        <ColorAnimation Storyboard.TargetProperty="Foreground.Color" Duration="0:0:1" To="Black" />
+        <ColorAnimation Storyboard.TargetProperty="Background.Color" Duration="0:0:1" To="Transparent" />
+    </Storyboard>
+
+    <!-- Styles -->
+
+    <Style x:Key="DefaultSidebarButton" TargetType="Button">
+        <Style.Setters>
+            <Setter Property="Template" Value="{DynamicResource DefaultButtonTemplate}"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Foreground" Value="{DynamicResource OverflowBrush}"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="FontFamily" Value="Calibri"/>
+            <Setter Property="FontSize" Value="20"/>
+        </Style.Setters>
+        <Style.Triggers>
+            <EventTrigger RoutedEvent="MouseEnter">
+                <BeginStoryboard Storyboard="{DynamicResource MouseEnterAnimation_1}"/>
+            </EventTrigger>
+            <EventTrigger RoutedEvent="MouseEnter">
+                <BeginStoryboard Storyboard="{DynamicResource MouseLeaveAnimation_1}"/>
+            </EventTrigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="RoundedSidebarButton" TargetType="Button">
+        <Style.Setters>
+            <Setter Property="Template" Value="{DynamicResource DefaultRoundedButtonTemplate}"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Foreground" Value="{DynamicResource OverflowBrush}"/>
+            <Setter Property="BorderBrush" Value="{DynamicResource OverflowBrush}"/>
+            <Setter Property="FontFamily" Value="Calibri"/>
+            <Setter Property="FontSize" Value="20"/>
+        </Style.Setters>
+        <Style.Triggers>
+            <EventTrigger RoutedEvent="MouseEnter">
+                <BeginStoryboard Storyboard="{StaticResource MouseEnterAnimation_1}"/>
+            </EventTrigger>
+            <EventTrigger RoutedEvent="MouseEnter">
+                <BeginStoryboard Storyboard="{StaticResource MouseLeaveAnimation_1}"/>
             </EventTrigger>
         </Style.Triggers>
     </Style>
