--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -12,29 +12,36 @@
 
     </Window.Resources>
 
-    <Grid x:Name="MainGrid">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="0.08*" x:Name="MainGrid_UpRow"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="0.08*" x:Name="MainGrid_BottomRow"></RowDefinition>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.05*" x:Name="MainGrid_LeftColumn"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="0.05*" x:Name="MainGrid_RightColumn"></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-
-        <Grid x:Name="NW" Grid.Row="0" Grid.Column="0" Background="Transparent"/>
-        <Grid x:Name="N" Grid.Row="0" Grid.Column="1" Background="Transparent"/>
-        <Grid x:Name="NE" Grid.Row="0" Grid.Column="2" Background="Transparent"/>
-
-        <Grid x:Name="W" Grid.Row="1" Grid.Column="0" Background="Transparent" MouseEnter="MouseIn"/>
-        <Grid x:Name="Center" Grid.Row="1" Grid.Column="1" Background="Transparent"/>
-        <Grid x:Name="E" Grid.Row="1" Grid.Column="2" Background="Transparent"/>
-
-        <Grid x:Name="SW" Grid.Row="2" Grid.Column="0" Background="Transparent"/>
-        <Grid x:Name="S" Grid.Row="2" Grid.Column="1" Background="Transparent"/>
-        <Grid x:Name="SE" Grid.Row="2" Grid.Column="2" Background="Transparent"/>
+    <Grid x:Name="MainGrid" >
+        <Grid Width="200" HorizontalAlignment="Left" Margin="0,0,0,0">
+            <StackPanel Background="{DynamicResource SurfaceBrush}">
+                <TextBlock Text="Niero "
+                           HorizontalAlignment="Left"
+                           VerticalAlignment="Center"
+                           Margin="20,15,0,0"
+                           FontSize="24"
+                           FontStretch="UltraExpanded"
+                           FontFamily="Freestyle Script">
+                </TextBlock>
+                <Separator  Background="{DynamicResource OverflowBrush}"
+                            BorderBrush="{DynamicResource OverflowBrush}">
+                </Separator>
+                <Grid Height="40" >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Button Style="{DynamicResource RoundedSidebarButton}"
+                            Grid.Column="0"
+                            Content="Prev">
+                    </Button>
+                    <Button Style="{DynamicResource RoundedSidebarButton}"
+                            Grid.Column="1"
+                            Content="Next">
+                    </Button>
+                </Grid>
+            </StackPanel>
+        </Grid>
 
     </Grid>
 </Window>
