--- a/Styles/ButtonStyles.xaml
+++ b/Styles/ButtonStyles.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:Niero">
+    
     <Style x:Key="AnimatedTransparentButton" TargetType="Button">
         <Style.Setters>
             <Setter Property="Background" Value="Transparent"/>
@@ -38,55 +39,25 @@
         </Style.Triggers>
     </Style>
 
-    <!-- Storyboards -->
-
-    <Storyboard x:Key="MouseEnterAnimation_1">
-        <ColorAnimation Storyboard.TargetProperty="Foreground.Color" Duration="0:0:1" To="Transparent" />
-        <ColorAnimation Storyboard.TargetProperty="Background.Color" Duration="0:0:1" To="Black" />
-    </Storyboard>
-
-    <Storyboard x:Key="MouseLeaveAnimation_1">
-        <ColorAnimation Storyboard.TargetProperty="Foreground.Color" Duration="0:0:1" To="Black" />
-        <ColorAnimation Storyboard.TargetProperty="Background.Color" Duration="0:0:1" To="Transparent" />
-    </Storyboard>
-
     <!-- Styles -->
 
-    <Style x:Key="DefaultSidebarButton" TargetType="Button">
+    <Style x:Key="DefaultSidebarButton" TargetType="{x:Type Button}">
         <Style.Setters>
             <Setter Property="Template" Value="{DynamicResource DefaultButtonTemplate}"/>
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="Foreground" Value="{DynamicResource OverflowBrush}"/>
-            <Setter Property="BorderBrush" Value="Transparent"/>
-            <Setter Property="FontFamily" Value="Calibri"/>
-            <Setter Property="FontSize" Value="20"/>
-        </Style.Setters>
-        <Style.Triggers>
-            <EventTrigger RoutedEvent="MouseEnter">
-                <BeginStoryboard Storyboard="{DynamicResource MouseEnterAnimation_1}"/>
-            </EventTrigger>
-            <EventTrigger RoutedEvent="MouseEnter">
-                <BeginStoryboard Storyboard="{DynamicResource MouseLeaveAnimation_1}"/>
-            </EventTrigger>
-        </Style.Triggers>
-    </Style>
-
-    <Style x:Key="RoundedSidebarButton" TargetType="Button">
-        <Style.Setters>
-            <Setter Property="Template" Value="{DynamicResource DefaultRoundedButtonTemplate}"/>
-            <Setter Property="Background" Value="Transparent"/>
             <Setter Property="Foreground" Value="{DynamicResource OverflowBrush}"/>
             <Setter Property="BorderBrush" Value="{DynamicResource OverflowBrush}"/>
             <Setter Property="FontFamily" Value="Calibri"/>
             <Setter Property="FontSize" Value="20"/>
         </Style.Setters>
-        <Style.Triggers>
-            <EventTrigger RoutedEvent="MouseEnter">
-                <BeginStoryboard Storyboard="{StaticResource MouseEnterAnimation_1}"/>
-            </EventTrigger>
-            <EventTrigger RoutedEvent="MouseEnter">
-                <BeginStoryboard Storyboard="{StaticResource MouseLeaveAnimation_1}"/>
-            </EventTrigger>
-        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="RoundedSidebarButton" TargetType="{x:Type Button}">
+        <Style.Setters>
+            <Setter Property="Template" Value="{DynamicResource DefaultRoundedButtonTemplate}"/>
+            <Setter Property="Foreground" Value="{DynamicResource OverflowBrush}"/>
+            <Setter Property="BorderBrush" Value="{DynamicResource OverflowBrush}"/>
+            <Setter Property="FontFamily" Value="Calibri"/>
+            <Setter Property="FontSize" Value="20"/>
+        </Style.Setters>
     </Style>
 </ResourceDictionary>
