--- a/SupportDictionaries/FontsNames.xaml
+++ b/SupportDictionaries/FontsNames.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:Niero">
-    
+
+    <FontFamily x:Key="FontAwesome">/SupportDictionaries/Fonts/#Font Awesome 5 Free Solid</FontFamily>
     <FontFamily x:Key="Magic">/SupportDictionaries/Fonts/#magic</FontFamily>
     
 </ResourceDictionary>
