--- a/App.xaml
+++ b/App.xaml
@@ -10,6 +10,7 @@
                 <ResourceDictionary Source="SupportDictionaries/FontsNames.xaml"/>
                 
                 <ResourceDictionary Source="Styles/ButtonStyles.xaml"/>
+                <ResourceDictionary Source="Styles/OtherStyles.xaml"/>
                 <ResourceDictionary Source="Styles/TextBlockStyles.xaml"/>
                 <ResourceDictionary Source="Styles/WindowStyles.xaml"/>
                 <ResourceDictionary Source="Templates/ButtonTemplates.xaml"/>
