--- a/Controls/SideMenuControl.xaml
+++ b/Controls/SideMenuControl.xaml
@@ -1,36 +1,41 @@
-﻿<UserControl x:Class="Niero.Controls.SideMenuControl"
+﻿<UserControl x:Class="Niero.Controls.SideMenuControl" x:Name="UsrControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Niero.Controls"
              mc:Ignorable="d">
+
     <UserControl.Template>
         <ControlTemplate TargetType="UserControl">
             <!-- Background -->
-            <Border x:Name="border"
+            <Border x:Name="BackBorder"
                     Background="{TemplateBinding Background}" 
                     BorderBrush="{TemplateBinding BorderBrush}"
                     BorderThickness="{TemplateBinding BorderThickness}"
-                    Width="{TemplateBinding Width}" 
-                    HorizontalAlignment="{TemplateBinding HorizontalAlignment}" 
-                    Margin="{TemplateBinding Margin}">
+                    Width="200" 
+                    HorizontalAlignment="Left" 
+                    Margin="-160,0,0,0"
+                    Opacity="1">
                 <!-- Main Grid -->
-                <Grid ShowGridLines="False">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="40"/>
-                        <RowDefinition Height="5"/>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="5"/>
-                        <RowDefinition Height="40"/>
-                    </Grid.RowDefinitions>
+                <Grid x:Name="MainGrid">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="1"/>
                         <ColumnDefinition Width="40"/>
                     </Grid.ColumnDefinitions>
-                    <!-- Title Top Bar -->
+
+                    <Grid x:Name="MenuGrid" Grid.Column="0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="1"/>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="1"/>
+                            <RowDefinition Height="40"/>
+                        </Grid.RowDefinitions>
+
                         <!-- Title TextBlock -->
-                    <TextBlock Grid.Column="0" Grid.Row="0"
+                        <TextBlock Grid.Row="0"
                                Text="{Binding Title}"
                                HorizontalAlignment="Left"
                                VerticalAlignment="Center"
@@ -38,9 +43,79 @@
                                FontSize="24"
                                FontStretch="UltraExpanded"
                                FontFamily="Freestyle Script">
-                    </TextBlock>
+                        </TextBlock>
+                        <!-- Separator -->
+                        <Separator Grid.Row="1"  
+                                VerticalAlignment="Center"
+                                Margin="0"
+                                Background="{DynamicResource OverflowBrush}"
+                                BorderBrush="{DynamicResource OverflowBrush}">
+                        </Separator>
+                        <!-- Content Presenter -->
+                        <Border Grid.Row="2" x:Name="ContentBackground"
+                                Background="{DynamicResource OverlayLightBrush}"
+                                Panel.ZIndex="0"/>
+                        <ContentPresenter Grid.Row="2"
+                                          Margin="0,5,0,5"
+                                          Panel.ZIndex="1"/>
+                        <!-- Separator -->
+                        <Separator  Grid.Row="3"
+                                VerticalAlignment="Center"
+                                Margin="0"
+                                Background="{DynamicResource OverflowBrush}"
+                                BorderBrush="{DynamicResource OverflowBrush}">
+                        </Separator>
+                        <!-- Default Buttons -->
+                        <Grid Grid.Row="4" Height="40" VerticalAlignment="Bottom">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition></ColumnDefinition>
+                                <ColumnDefinition></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
+                            <Button x:Name="PrevButton"    
+                            Style="{DynamicResource RoundedSidebarButton}"
+                            Grid.Column="0"
+                            Content="&#xF100;">
+                            </Button>
+                            <Button x:Name="NextButton"
+                            Style="{DynamicResource RoundedSidebarButton}"
+                            Grid.Column="1"
+                            Content="&#xF101;">
+                            </Button>
+                        </Grid>
+                    </Grid>
+                    <!-- Separator Grid-->
+                    <Grid x:Name="VSeparatorGrid" Grid.Column="1" Margin="0,0,0,0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="1"/>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="1"/>
+                            <RowDefinition Height="40"/>
+                        </Grid.RowDefinitions>
+                        <Separator Style="{DynamicResource VerticalSeparatorStyle}"
+                                   Grid.Row="0"
+                                   Grid.RowSpan="5">
+                        </Separator>
+                    </Grid>
+                    <!-- Icon Grid -->
+                    <Grid x:Name="IconGrid" Grid.Column="2">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="1"/>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="1"/>
+                            <RowDefinition Height="40"/>
+                        </Grid.RowDefinitions>
+
+                        <!-- Custom Mask -->
+                        <Border x:Name="IconGridMask"
+                                Panel.ZIndex="0"
+                                Grid.RowSpan="4"
+                                Background="{Binding Background}">
+                        </Border>
+
                         <!-- Settings Icon -->
-                    <Label Grid.Column="1" Grid.Row="0"
+                        <Label Grid.Row="0"
                                VerticalAlignment="Center"
                                HorizontalAlignment="Center"
                                VerticalContentAlignment="Center"
@@ -48,36 +123,24 @@
                                FontFamily="{StaticResource FontAwesome}"
                                FontSize="20"
                                Content="&#xF039;">
-                    </Label>
-                    <!-- Separator -->
-                    <Separator Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" 
-                                VerticalAlignment="Top"
+                        </Label>
+                        <Separator Grid.Row="1"  
+                                VerticalAlignment="Center"
+                                Margin="0"
                                 Background="{DynamicResource OverflowBrush}"
                                 BorderBrush="{DynamicResource OverflowBrush}">
-                    </Separator>
-                    <!-- Additional Content -->
-                    <ContentPresenter Grid.Row="2" Grid.Column="0"/>
-                    <!-- Separator -->
-                    <Separator  Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2"
-                                VerticalAlignment="Bottom"
+                        </Separator>
+                        <Separator  Grid.Row="3"
+                                VerticalAlignment="Center"
+                                Margin="0"
                                 Background="{DynamicResource OverflowBrush}"
                                 BorderBrush="{DynamicResource OverflowBrush}">
-                    </Separator>
-                    <!-- Default Buttons -->
-                    <Grid Grid.Row="4" Height="40" VerticalAlignment="Bottom">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition></ColumnDefinition>
-                            <ColumnDefinition></ColumnDefinition>
-                        </Grid.ColumnDefinitions>
-                        <Button x:Name="PrevButton"    
-                            Style="{DynamicResource RoundedSidebarButton}"
-                            Grid.Column="0"
-                            Content="&#xF100;">
-                        </Button>
-                        <Button x:Name="NextButton"
-                            Style="{DynamicResource RoundedSidebarButton}"
-                            Grid.Column="1"
-                            Content="&#xF101;">
+                        </Separator>
+                        <!-- Exit Button -->
+                        <Button x:Name="HomeButton" Grid.Row="4"
+                                Panel.ZIndex="100"
+                                Style="{DynamicResource HomeButton}"
+                                Content="&#xf015;">
                         </Button>
                     </Grid>
                 </Grid>
@@ -86,50 +149,63 @@
             <!-- Triggers -->
             <ControlTemplate.Triggers>
                 <!-- Animations -->
-                <EventTrigger RoutedEvent="UserControl.MouseEnter">
-                    <BeginStoryboard>
-                        <Storyboard>
+                <EventTrigger SourceName="IconGridMask" RoutedEvent="MouseEnter">
+                    <BeginStoryboard x:Name="MenuOpenStoryboard">
+                        <Storyboard x:Name="MenuOpenAnimation">
                             <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)" 
-                                            Duration="0:0:1" 
+                                            Duration="0:0:0.75" 
                                             To="{StaticResource OverlayLightColor}"/>
-                            <!--<DoubleAnimation Storyboard.TargetName="FirstGroup" 
-                                             Storyboard.TargetProperty="Opacity"
-                                             Duration="0:0:1"
-                                             To="1"/>-->
-                            <ThicknessAnimation Storyboard.TargetProperty="Margin"
-                                                To="0,0,0,0"
-                                                Duration="0:0:1"/>
-                        </Storyboard>
-                    </BeginStoryboard>
-                </EventTrigger>
-                <EventTrigger RoutedEvent="UserControl.MouseLeave">
-                    <BeginStoryboard>
-                        <Storyboard>
-                            <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)" 
-                                            Duration="0:0:1" 
+                            <ColorAnimation Storyboard.TargetName="ContentBackground"
+                                            Storyboard.TargetProperty="(Background).(SolidColorBrush.Color)"
+                                            Duration="0:0:0.75"
                                             To="{StaticResource SurfaceColor}"/>
-                            <!--<DoubleAnimation Storyboard.TargetName="FirstGroup" 
-                                             Storyboard.TargetProperty="Opacity"
-                                             Duration="0:0:1"
-                                             To="0"/>-->
-                            <ThicknessAnimation Storyboard.TargetProperty="Margin"
-                                                To="-80,0,0,0"
-                                                Duration="0:0:1"/>
                         </Storyboard>
                     </BeginStoryboard>
                 </EventTrigger>
+                <EventTrigger SourceName="MainGrid" RoutedEvent="MouseLeave">
+                    <BeginStoryboard x:Name="MenuCloseStoryboard">
+                        <Storyboard x:Name="MenuCloseAnimation">
+                            <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)" 
+                                            Duration="0:0:0.75" 
+                                            To="{StaticResource SurfaceColor}"/>
+                            <ColorAnimation Storyboard.TargetName="ContentBackground"
+                                            Storyboard.TargetProperty="(Background).(SolidColorBrush.Color)"
+                                            Duration="0:0:0.75"
+                                            To="{StaticResource OverlayLightColor}"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+                <EventTrigger RoutedEvent="local:SideMenuControl.HideChangedToTrue">
+                    <RemoveStoryboard BeginStoryboardName="MenuCloseStoryboard"/>
+                    <BeginStoryboard x:Name="MenuHideStoryboard">
+                        <Storyboard x:Name="MenuHideAnimation">
+                            <DoubleAnimation Storyboard.TargetProperty="(Border.Opacity)"
+                                             Duration="0:0:0.75"
+                                             To="0"/>
+                            <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)" 
+                                            Duration="0:0:0.75" 
+                                            To="{StaticResource SurfaceColor}"/>
+                            <ColorAnimation Storyboard.TargetName="ContentBackground"
+                                            Storyboard.TargetProperty="(Background).(SolidColorBrush.Color)"
+                                            Duration="0:0:0.75"
+                                            To="{StaticResource OverlayLightColor}"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+                <EventTrigger RoutedEvent="local:SideMenuControl.HideChangedToFalse"/>
             </ControlTemplate.Triggers>
         </ControlTemplate>
     </UserControl.Template>
-    
+
+    <!-- Style Setters -->
+
     <UserControl.Style>
         <Style TargetType="UserControl">
             <Style.Setters>
                 <Setter Property="Background" Value="{StaticResource SurfaceBrush}"/>
                 <Setter Property="BorderBrush" Value="{StaticResource OverflowBrush}"/>
                 <Setter Property="BorderThickness" Value="1"/>
-                <Setter Property="Margin" Value="-80,0,0,0"/>
-                <Setter Property="HorizontalAlignment" Value="Left"/>
+                <Setter Property="IsHitTestVisible" Value="True"/>
             </Style.Setters>
         </Style>
     </UserControl.Style>
