--- a/SupportDictionaries/Themes/DarkTheme.xaml
+++ b/SupportDictionaries/Themes/DarkTheme.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:Niero">
-
+    
+    <!-- Base Colors -->
     <Color x:Key="OverlayLightColor">#383B40</Color>
     <SolidColorBrush x:Key="OverlayLightBrush" Color="{DynamicResource OverlayLightColor}"/>
 
@@ -16,5 +17,24 @@
 
     <Color x:Key="OverflowColor">#010101</Color>
     <SolidColorBrush x:Key="OverflowBrush" Color="{DynamicResource OverflowColor}"/>
-    
+
+    <!-- Addition Colors -->
+    <Color x:Key="RedLightColor">#e82020</Color>
+    <SolidColorBrush x:Key="RedLightBrush" Color="{DynamicResource RedLightColor}"/>
+
+    <Color x:Key="RedNormalColor">#e82e2e</Color>
+    <SolidColorBrush x:Key="RedNormalBrush" Color="{DynamicResource RedNormalColor}"/>
+
+    <Color x:Key="RedDarkColor">#b31b1b</Color>
+    <SolidColorBrush x:Key="RedDarkBrush" Color="{DynamicResource RedDarkColor}"/>
+
+    <Color x:Key="BlueLightColor">#0052f7</Color>
+    <SolidColorBrush x:Key="BlueLightBrush" Color="{DynamicResource BlueLightColor}"/>
+
+    <Color x:Key="BlueNormalColor">#0264db</Color>
+    <SolidColorBrush x:Key="BlueNormalBrush" Color="{DynamicResource BlueNormalColor}"/>
+
+    <Color x:Key="BlueDarkColor">#1c62b8</Color>
+    <SolidColorBrush x:Key="BlueDarkBrush" Color="{DynamicResource BlueDarkColor}"/>
+
 </ResourceDictionary>
