--- a/Controls/SideMenuControl.xaml
+++ b/Controls/SideMenuControl.xaml
@@ -39,10 +39,10 @@
                                Text="{Binding Title}"
                                HorizontalAlignment="Left"
                                VerticalAlignment="Center"
-                               Margin="20,15,0,0"
-                               FontSize="24"
+                               Margin="15,15,0,0"
+                               FontSize="22"
                                FontStretch="UltraExpanded"
-                               FontFamily="Freestyle Script">
+                               FontFamily="{StaticResource NierAutomata}">
                         </TextBlock>
                         <!-- Separator -->
                         <Separator Grid.Row="1"  
@@ -56,7 +56,7 @@
                                 Background="{DynamicResource OverlayLightBrush}"
                                 Panel.ZIndex="0"/>
                         <ContentPresenter Grid.Row="2"
-                                          Margin="0,5,0,5"
+                                          Margin="0,0,0,0"
                                           Panel.ZIndex="1"/>
                         <!-- Separator -->
                         <Separator  Grid.Row="3"
@@ -72,14 +72,14 @@
                                 <ColumnDefinition></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Button x:Name="PrevButton"    
-                            Style="{DynamicResource RoundedSidebarButton}"
-                            Grid.Column="0"
-                            Content="&#xF100;">
+                                    Style="{DynamicResource ArrowButton}"
+                                    RenderTransform="{StaticResource LeftArrow}"
+                                    Grid.Column="0">
                             </Button>
                             <Button x:Name="NextButton"
-                            Style="{DynamicResource RoundedSidebarButton}"
-                            Grid.Column="1"
-                            Content="&#xF101;">
+                                    Style="{DynamicResource ArrowButton}"
+                                    RenderTransform="{StaticResource RightArrow}"
+                                    Grid.Column="1">
                             </Button>
                         </Grid>
                     </Grid>
@@ -153,41 +153,40 @@
                     <BeginStoryboard x:Name="MenuOpenStoryboard">
                         <Storyboard x:Name="MenuOpenAnimation">
                             <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)" 
-                                            Duration="0:0:0.75" 
-                                            To="{StaticResource OverlayLightColor}"/>
+                                            Duration="0:0:0.5" 
+                                            To="{StaticResource OverlayDarkColor}"/>
                             <ColorAnimation Storyboard.TargetName="ContentBackground"
                                             Storyboard.TargetProperty="(Background).(SolidColorBrush.Color)"
-                                            Duration="0:0:0.75"
+                                            Duration="0:0:0.5"
                                             To="{StaticResource SurfaceColor}"/>
                         </Storyboard>
                     </BeginStoryboard>
                 </EventTrigger>
-                <EventTrigger SourceName="MainGrid" RoutedEvent="MouseLeave">
+                <EventTrigger SourceName="BackBorder" RoutedEvent="MouseLeave">
                     <BeginStoryboard x:Name="MenuCloseStoryboard">
                         <Storyboard x:Name="MenuCloseAnimation">
                             <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)" 
-                                            Duration="0:0:0.75" 
+                                            Duration="0:0:0.5" 
                                             To="{StaticResource SurfaceColor}"/>
                             <ColorAnimation Storyboard.TargetName="ContentBackground"
                                             Storyboard.TargetProperty="(Background).(SolidColorBrush.Color)"
-                                            Duration="0:0:0.75"
-                                            To="{StaticResource OverlayLightColor}"/>
+                                            Duration="0:0:0.5"
+                                            To="{StaticResource OverlayDarkColor}"/>
                         </Storyboard>
                     </BeginStoryboard>
                 </EventTrigger>
                 <EventTrigger RoutedEvent="local:SideMenuControl.HideChangedToTrue">
-                    <RemoveStoryboard BeginStoryboardName="MenuCloseStoryboard"/>
                     <BeginStoryboard x:Name="MenuHideStoryboard">
                         <Storyboard x:Name="MenuHideAnimation">
                             <DoubleAnimation Storyboard.TargetProperty="(Border.Opacity)"
                                              Duration="0:0:0.75"
                                              To="0"/>
                             <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)" 
-                                            Duration="0:0:0.75" 
+                                            Duration="0:0:0.5" 
                                             To="{StaticResource SurfaceColor}"/>
                             <ColorAnimation Storyboard.TargetName="ContentBackground"
                                             Storyboard.TargetProperty="(Background).(SolidColorBrush.Color)"
-                                            Duration="0:0:0.75"
+                                            Duration="0:0:0.5"
                                             To="{StaticResource OverlayLightColor}"/>
                         </Storyboard>
                     </BeginStoryboard>
