--- a/Styles/ButtonStyles.xaml
+++ b/Styles/ButtonStyles.xaml
@@ -41,11 +41,14 @@
 
     <!-- Styles -->
 
+    
+    
     <Style x:Key="DefaultSidebarButton" TargetType="{x:Type Button}">
         <Style.Setters>
             <Setter Property="Template" Value="{DynamicResource DefaultButtonTemplate}"/>
             <Setter Property="Foreground" Value="{DynamicResource OverflowBrush}"/>
             <Setter Property="BorderBrush" Value="{DynamicResource OverflowBrush}"/>
+            <Setter Property="BorderThickness" Value="0"/>
             <Setter Property="FontFamily" Value="{StaticResource FontAwesome}"/>
             <Setter Property="FontSize" Value="20"/>
         </Style.Setters>
@@ -69,6 +72,19 @@
             <Setter Property="Template" Value="{DynamicResource HomeButtonTemplate}"></Setter>
             <Setter Property="FontFamily" Value="{StaticResource FontAwesome}"/>
             <Setter Property="FontSize" Value="18"/>
+        </Style.Setters>
+    </Style>
+
+    <RotateTransform x:Key="UpArrow" CenterX="35" CenterY="20" Angle="90"/>
+    <RotateTransform x:Key="RightArrow" CenterX="35" CenterY="20" Angle="180"/>
+    <RotateTransform x:Key="DownArrow" CenterX="35" CenterY="20" Angle="270"/>
+    <RotateTransform x:Key="LeftArrow" CenterX="35" CenterY="20" Angle="0"/>
+
+    <Style x:Key="ArrowButton" TargetType="{x:Type Button}">
+        <Style.Setters>
+            <Setter Property="Template" Value="{DynamicResource ArrowButtonTemplate}"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
         </Style.Setters>
     </Style>
 </ResourceDictionary>
